--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
       - name: Set permissions
-        run: chmod +x ./path/to/run.sh
+        run: chmod +x ./run.sh
       - name: Run Test ${{ inputs.platform }}
         uses: ./
         env:
