--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,10 +18,39 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --reporter=list,html
       - uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+      - name: Extract HTML Report
+        run: |
+          mkdir extracted-report
+          unzip playwright-report/playwright-report.zip -d extracted-report
+        if: always()
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Clone Reporting Repository
+        run: |
+          git clone https://github.com/skumar09/testreport.git reporting-repo
+        if: always()
+
+      - name: Copy HTML Report to Reporting Repository
+        run: |
+          cp extracted-report/*.html reporting-repo/
+        if: always()
+
+      - name: Commit and Push Changes
+        run: |
+          cd reporting-repo
+          git add .
+          git commit -m "Add Playwright HTML Report"
+          git push origin main  # Update 'main' to your branch name if needed
+        if: always()
