--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,18 +23,20 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: playwright-report/index.html
           retention-days: 30
 
       - name: Downlaod Artifact Contents
-        run: |
-          curl -o playwright-report.zip -L https://github.com/skumar09/sample-2/suites/16684591726/artifacts/953406140
+        uses: actions/download-artifact@v3
         if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/index.html
 
       - name: Extract HTML Report
         run: |
           mkdir extracted-report
-          unzip playwright-report.zip -d extracted-report
+          unzip playwright-report/index.html.zip -d extracted-report
         if: always()
 
       - name: Configure Git
