--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,12 +31,12 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/index.html
 
       - name: Extract HTML Report
         run: |
+          ls -R
           mkdir extracted-report
-          unzip playwright-report/index.html.zip -d extracted-report
+          unzip playwright-report.zip -d extracted-report
         if: always()
 
       - name: Configure Git
