--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           git config --global user.email "santoshkumar.sn@gmail.com"
           git config --global user.name "skumar09"
+          git remote set-url origin "https://$GH_PAT@github.com/skumar09/testreport.git"
 
       - name: Clone Reporting Repository
         run: |
