--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,11 +41,11 @@ jobs:
         run: |
           git config --global user.email "santoshkumar.sn@gmail.com"
           git config --global user.name "skumar09"
-          git remote set-url origin "https://skumar09@github.com/skumar09/testreport.git"
+          git remote set-url origin "https://$GH_PAT1@github.com/skumar09/testreport.git"
 
       - name: Clone Reporting Repository
         run: |
-          git clone git@github.com:skumar09/testreport.git reporting-repo
+          git clone https://github.com/skumar09/testreport.git reporting-repo
         if: always()
 
       - name: Copy HTML Report to Reporting Repository
