--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,7 +41,10 @@ jobs:
         run: |
           git config --global user.email "santoshkumar.sn@gmail.com"
           git config --global user.name "skumar09"
-          git remote set-url origin "https://$GH_PAT1@github.com/skumar09/testreport.git"
+          git remote set-url origin "https://$GH_PAT@github.com/skumar09/testreport.git"
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+
 
       - name: Clone Reporting Repository
         run: |
