--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -63,6 +63,7 @@ jobs:
           cd reporting-repo
           git remote --v
           git add .
+          git status
           git commit -m "Add Playwright HTML Report"
           git push origin main 
         if: always()
