--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           cd reporting-repo
           git remote --v
+          git status
           git add .
           git status
           git commit -m "Add Playwright HTML Report"
